Bug 349879 - nsSVGGlyphFrame.cpp code consolidation. r=tor, sr=roc