layout/svg/base/src/nsSVGGlyphFrame.cpp
@@ -195,9 +195,10 @@ nsSVGGlyphFrame::IsFrameOfType(PRUint32 aFlags) const
 //----------------------------------------------------------------------
 // nsISVGChildFrame methods
 
-static void
-LoopCharacters(cairo_t *aCtx, nsAString &aText, nsSVGCharacterPosition *aCP,
-               void (*aFunc)(cairo_t *cr, const char *utf8))
+void
+nsSVGGlyphFrame::LoopCharacters(cairo_t *aCtx, const nsAString &aText,
+                                const nsSVGCharacterPosition *aCP,
+                                void (*aFunc)(cairo_t *cr, const char *utf8))
 {
   if (!aCP) {
     aFunc(aCtx, NS_ConvertUTF16toUTF8(aText).get());
@@ -229,9 +230,7 @@ nsSVGGlyphFrame::PaintSVG(nsISVGRendererCanvas* canvas, nsRect *aDirtyRect)
   }
 
   nsAutoString text;
-  GetCharacterData(text);
-
-  if (text.IsEmpty()) {
+  if (!GetCharacterData(text)) {
     return NS_OK;
   }
 
@@ -241,7 +240,7 @@ nsSVGGlyphFrame::PaintSVG(nsISVGRendererCanvas* canvas, nsRect *aDirtyRect)
 
   SelectFont(ctx);
 
-  nsresult rv = GetCharacterPosition(ctx, getter_Transfers(cp));
+  nsresult rv = GetCharacterPosition(ctx, text, getter_Transfers(cp));
 
   PRUint16 renderMode;
   cairo_matrix_t matrix;
@@ -376,26 +375,20 @@ nsSVGGlyphFrame::UpdateCoveredRegion()
   }
 
   nsAutoString text;
-  GetCharacterData(text);
-
-  if (text.IsEmpty()) {
+  if (!GetCharacterData(text)) {
     return NS_OK;
   }
 
   nsAutoArrayPtr<nsSVGCharacterPosition> cp;
 
-  nsSVGAutoGlyphHelperContext ctx(this);
+  nsSVGAutoGlyphHelperContext ctx(this, text, getter_Transfers(cp));
 
-  nsresult rv = GetCharacterPosition(ctx, getter_Transfers(cp));
+  nsresult rv = GetGlobalTransform(ctx, nsnull);
   NS_ENSURE_SUCCESS(rv, rv);
-
-  rv = GetGlobalTransform(ctx, nsnull);
-  NS_ENSURE_SUCCESS(rv, rv);
-
-  if (!cp)
-    cairo_move_to(ctx, mX, mY);
 
   if (!cp) {
+    cairo_move_to(ctx, mX, mY);
+
     if (hasStroke) {
       cairo_text_path(ctx, NS_ConvertUTF16toUTF8(text).get());
     } else {
@@ -487,19 +480,15 @@ nsSVGGlyphFrame::GetBBox(nsIDOMSVGRect **_retval)
   *_retval = nsnull;
 
   nsAutoString text;
-  GetCharacterData(text);
-
-  if (text.IsEmpty())
+  if (!GetCharacterData(text)) {
     return NS_OK;
+  }
 
   nsAutoArrayPtr<nsSVGCharacterPosition> cp;
 
-  nsSVGAutoGlyphHelperContext ctx(this);
+  nsSVGAutoGlyphHelperContext ctx(this, text, getter_Transfers(cp));
 
-  nsresult rv = GetCharacterPosition(ctx, getter_Transfers(cp));
-  NS_ENSURE_SUCCESS(rv, rv);
-
-  rv = GetGlobalTransform(ctx, nsnull);
+  nsresult rv = GetGlobalTransform(ctx, nsnull);
   NS_ENSURE_SUCCESS(rv, rv);
 
   if (!cp)
@@ -538,7 +527,7 @@ nsSVGGlyphFrame::GetCanvasTM(nsIDOMSVGMatrix * *aCTM)
 //----------------------------------------------------------------------
 // nsSVGGlyphFrame methods:
 
-void
+PRBool
 nsSVGGlyphFrame::GetCharacterData(nsAString & aCharacterData)
 {
   nsAutoString characterData;
@@ -552,13 +541,19 @@ nsSVGGlyphFrame::GetCharacterData(nsAString & aCharacterData)
                                      trimTrailingWhitespace);
   }
   aCharacterData = characterData;
+
+  return !characterData.IsEmpty();
 }
 
 nsresult
 nsSVGGlyphFrame::GetCharacterPosition(cairo_t *ctx,
+                                      const nsAString &aText,
                                       nsSVGCharacterPosition **aCharacterPosition)
 {
   *aCharacterPosition = nsnull;
+
+  NS_ASSERTION(!aText.IsEmpty(), "no text");
+
   nsSVGTextPathFrame *textPath = FindTextPathParent();
 
   /* we're an ordinary fragment - return */
@@ -573,14 +568,12 @@ nsSVGGlyphFrame::GetCharacterPosition(cairo_t *ctx,
     return NS_ERROR_FAILURE;
 
   float length = data->GetLength();
-  nsAutoString text;
-  GetCharacterData(text);
-  PRUint32 strLength = text.Length();
+  PRUint32 strLength = aText.Length();
 
   nsSVGCharacterPosition *cp = new nsSVGCharacterPosition[strLength];
 
   for (PRUint32 k = 0; k < strLength; k++)
-      cp[k].draw = PR_FALSE;
+    cp[k].draw = PR_FALSE;
 
   float x = mX;
   for (PRUint32 i = 0; i < strLength; i++) {
@@ -588,7 +581,7 @@ nsSVGGlyphFrame::GetCharacterPosition(cairo_t *ctx,
     cairo_text_extents_t extent;
 
     cairo_text_extents(ctx,
-                       NS_ConvertUTF16toUTF8(Substring(text, i, 1)).get(),
+                       NS_ConvertUTF16toUTF8(Substring(aText, i, 1)).get(),
                        &extent);
     float advance = extent.x_advance;
 
@@ -778,10 +771,7 @@ nsSVGGlyphFrame::GetStartPositionOfChar(PRUint32 charnum, nsIDOMSVGPoint **_retv
 
   nsAutoArrayPtr<nsSVGCharacterPosition> cp;
 
-  nsSVGAutoGlyphHelperContext ctx(this);
-
-  nsresult rv = GetCharacterPosition(ctx, getter_Transfers(cp));
-  NS_ENSURE_SUCCESS(rv, rv);
+  nsSVGAutoGlyphHelperContext ctx(this, text, getter_Transfers(cp));
 
   float x, y;
 
@@ -824,10 +814,7 @@ nsSVGGlyphFrame::GetEndPositionOfChar(PRUint32 charnum, nsIDOMSVGPoint **_retval
 
   nsAutoArrayPtr<nsSVGCharacterPosition> cp;
   
-  nsSVGAutoGlyphHelperContext ctx(this);
-
-  nsresult rv = GetCharacterPosition(ctx, getter_Transfers(cp));
-  NS_ENSURE_SUCCESS(rv, rv);
+  nsSVGAutoGlyphHelperContext ctx(this, text, getter_Transfers(cp));
 
   cairo_text_extents_t extent;
 
@@ -865,10 +852,7 @@ nsSVGGlyphFrame::GetExtentOfChar(PRUint32 charnum, nsIDOMSVGRect **_retval)
 
   nsAutoArrayPtr<nsSVGCharacterPosition> cp;
 
-  nsSVGAutoGlyphHelperContext ctx(this);
-
-  nsresult rv = GetCharacterPosition(ctx, getter_Transfers(cp));
-  NS_ENSURE_SUCCESS(rv, rv);
+  nsSVGAutoGlyphHelperContext ctx(this, text, getter_Transfers(cp));
 
   cairo_text_extents_t extent;
   cairo_text_extents(ctx,
@@ -936,10 +920,7 @@ nsSVGGlyphFrame::GetRotationOfChar(PRUint32 charnum, float *_retval)
 
   nsAutoArrayPtr<nsSVGCharacterPosition> cp;
 
-  nsSVGAutoGlyphHelperContext ctx(this);
-
-  nsresult rv = GetCharacterPosition(ctx, getter_Transfers(cp));
-  NS_ENSURE_SUCCESS(rv, rv);
+  nsSVGAutoGlyphHelperContext ctx(this, text, getter_Transfers(cp));
 
   if (cp) {
     if (cp[charnum].draw == PR_FALSE) {
@@ -990,9 +971,7 @@ NS_IMETHODIMP_(float)
 nsSVGGlyphFrame::GetAdvance()
 {
   nsAutoString text;
-  GetCharacterData(text);
-
-  if (text.IsEmpty()) {
+  if (!GetCharacterData(text)) {
     return 0.0f;
   }
 
@@ -1132,9 +1111,7 @@ NS_IMETHODIMP_(float)
 nsSVGGlyphFrame::GetComputedTextLength()
 {
   nsAutoString text;
-  GetCharacterData(text);
-
-  if (text.IsEmpty()) {
+  if (!GetCharacterData(text)) {
     return 0.0f;
   }
 
@@ -1176,10 +1153,7 @@ nsSVGGlyphFrame::GetCharNumAtPosition(nsIDOMSVGPoint *point)
 
   nsAutoArrayPtr<nsSVGCharacterPosition> cp;
 
-  nsSVGAutoGlyphHelperContext ctx(this);
-
-  nsresult rv = GetCharacterPosition(ctx, getter_Transfers(cp));
-  NS_ENSURE_SUCCESS(rv, rv);
+  nsSVGAutoGlyphHelperContext ctx(this, text, getter_Transfers(cp));
 
   float x, y;
   if (!cp) {
@@ -1419,19 +1393,15 @@ PRBool
 nsSVGGlyphFrame::ContainsPoint(float x, float y)
 {
   nsAutoString text;
-  GetCharacterData(text);
-
-  if (text.IsEmpty())
+  if (!GetCharacterData(text)) {
     return PR_FALSE;
+  }
 
   nsAutoArrayPtr<nsSVGCharacterPosition> cp;
 
-  nsSVGAutoGlyphHelperContext ctx(this);
+  nsSVGAutoGlyphHelperContext ctx(this, text, getter_Transfers(cp));
 
-  nsresult rv = GetCharacterPosition(ctx, getter_Transfers(cp));
-  NS_ENSURE_SUCCESS(rv, PR_FALSE);
-
-  rv = GetGlobalTransform(ctx, nsnull);
+  nsresult rv = GetGlobalTransform(ctx, nsnull);
   NS_ENSURE_SUCCESS(rv, PR_FALSE);
 
   float xx = 0, yy = 0;
@@ -1504,10 +1474,21 @@ nsSVGGlyphFrame::GetGlobalTransform(cairo_t *ctx,
 //----------------------------------------------------------------------
 // helper class
 
-nsSVGAutoGlyphHelperContext::nsSVGAutoGlyphHelperContext(nsSVGGlyphFrame *aSource)
+nsSVGGlyphFrame::nsSVGAutoGlyphHelperContext::nsSVGAutoGlyphHelperContext(
+    nsSVGGlyphFrame *aSource,
+    const nsAString &aText,
+    nsSVGCharacterPosition **cp)
+{
+  Init(aSource);
+
+  nsresult rv = aSource->GetCharacterPosition(mCT, aText, cp);
+  if NS_FAILED(rv) {
+    NS_WARNING("failed to get character position data");
+  }
+}
+
+void nsSVGGlyphFrame::nsSVGAutoGlyphHelperContext::Init(nsSVGGlyphFrame *aSource)
 {
   mCT = cairo_create(nsSVGUtils::GetCairoComputationalSurface());
-  if (aSource) {
-    aSource->SelectFont(mCT);
-  }
+  aSource->SelectFont(mCT);
 }
